test/golden/{truncate numberCOLON.3o}.golden

INITIALPATH:7:41: error:
    • Type incompatible with precision (.3), use any of {'e', 'E', 'f', 'F', 'g', 'G', 'n', 's', '%'} or remove the precision field.

    • In the quasi-quotation: [fmt|{truncate number:.3o}|]
  |
7 | main = putStrLn [fmt|{truncate number:.3o}|]
  |                                         ^
